# sentinel-ai

./: .dockerignore  .env.example  .gitignore  README.md  SECURITY.md  config.py  pyproject.toml  sentinel_demo.db  sentinel_memory.db
.claude/: launch.json
.devcontainer/: devcontainer.json  setup.sh  start.sh
.github/: dependabot.yml
.github/workflows/: codeql.yml  test.yml
agent/: llm_provider.py  mcp_client.py  memory.py  orchestrator.py
api/: main.py
backend/: config.py
backend/agents/: llm_provider.py  mcp_client.py  memory.py  orchestrator.py  planner.py
backend/api/: main.py  routes_admin.py  routes_chat.py  routes_documents.py
backend/auth/: audit.py  jwt.py  middleware.py  models.py  password.py  rbac.py  routes.py
backend/mcp_server/: auth.py  server.py
backend/mcp_server/connectors/: calendar_client.py  database_client.py  filesystem_client.py  github_client.py  gmail_client.py  status.py
backend/mcp_server/tools/: calendar_tools.py  database_tools.py  filesystem_tools.py  github_tools.py  gmail_tools.py  rag_tools.py
backend/observability/: logging.py  metrics.py  security_headers.py  tracing.py
backend/rag/: chunking.py  ingest.py  pdf_parser.py  pgvector_store.py  retriever.py  store.py
backend/rag/sample_docs/: engineering_standards.md  expense_policy.md  security_policy.md
backend/tests/: test_mcp_tools.py  test_orchestrator.py  test_rag.py  test_security.py
deploy/: docker-compose.yml  fly.toml
docker/: Dockerfile.backend
docs/: architecture.md
eval/: dataset.jsonl  run_eval.py
evaluation/: report.py  run_eval.py
frontend/: next.config.mjs  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/documents/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: Sidebar.tsx  ToolCallViewer.tsx
frontend/src/lib/: api.ts
mcp_server/: auth.py  server.py
mcp_server/connectors/: github_client.py
mcp_server/tools/: github_tools.py  rag_tools.py  system_tools.py
rag/: ingest.py  retriever.py  store.py
rag/sample_docs/: incident_response.md  onboarding_faq.md  pto_policy.md
tests/: test_mcp_tools.py  test_orchestrator.py  test_rag.py
