[project]
name = "enterprise-ai-assistant"
version = "0.1.0"
description = "MCP-based enterprise AI assistant demonstrating tool calling, auth, connectors, RAG, agent workflows, and evaluation"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.1",
    "anthropic>=0.40.0",
    "openai>=1.54.0",
    "chromadb>=0.5.20",
    "numpy<2",
    "scipy==1.11.4",
    "scikit-learn==1.3.2",
    "transformers==4.41.2",
    "tokenizers==0.19.1",
    "sentence-transformers==2.7.0",
    "huggingface_hub==0.23.4",
    "torch==2.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mcp_server", "agent", "rag", "api", "eval"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
